migrate to latest UGDB API changes